# agent-route-node

./: .env.example  .gitignore  README.md  debug_hand.py  install.sh  pyproject.toml  register_node.py  requirements.txt  start.sh  stop.sh  test_hands.py
app/: .workspace_sync_state.json  agent_registry.py  api_logger.py  cli.py  config.py  edge_register.py  executor.py.legacy  history.py.legacy  main.py  report_engine.py  report_store.py  scheduler.py  session_store.py  sessions.db  task_analytics.py  task_puller.py  tasks.py  workflow_executor.py  workflow_store.py  workspace_sync.py
app/brain/: __init__.py  context.py  harness.py  orchestrator.py
app/hands/: __init__.py  activity_classifier.py  base.py  claude_hand.py  codex_hand.py  gemini_hand.py  mflux_hand.py  ollama_hand.py  opencode_hand.py  rate_limit.py  registry.py  stream_processor.py  vane_hand.py
app/sandbox/: __init__.py  pool.py
app/session/: __init__.py  events.py  manager.py
