[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-route-node"
version = "1.0.0"
description = "Edge node for the Agent Route multi-agent orchestration network"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi[standard]>=0.110.0",
    "pydantic>=2.7.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
agent-route-node = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]
